native/typst-ffi/include/typst_ffi.h

#ifndef TYPST_FFI_H
#define TYPST_FFI_H

/* WARNING: This file is auto-generated by cbindgen. Do not edit. */

#include <stdarg.h>
#include <stdbool.h>
#include <stdint.h>
#include <stdlib.h>

/**
 * A buffer returned to the caller that must be freed with `typst_buffer_free`.
 */
typedef struct typst_TypstBuffer typst_TypstBuffer;

/**
 * Opaque compilation result handle.
 */
typedef struct typst_TypstCompileResult typst_TypstCompileResult;

/**
 * Opaque compiler handle.
 */
typedef struct typst_TypstCompiler typst_TypstCompiler;

#ifdef __cplusplus
extern "C" {
#endif // __cplusplus

/**
 * Create a new `TypstCompiler` instance.
 *
 * Returns an opaque handle that must be freed with `typst_compiler_free`.
 * Returns `NULL` on allocation failure (extremely unlikely).
 */
TYPST_API struct typst_TypstCompiler *typst_compiler_new(void);

/**
 * Free a `TypstCompiler` instance.
 *
 * # Safety
 * `compiler` must be a valid pointer returned by `typst_compiler_new`,
 * or `NULL` (in which case this is a no-op).
 */
TYPST_API void typst_compiler_free(struct typst_TypstCompiler *compiler);

/**
 * Set the root directory for file resolution.
 *
 * # Safety
 * `compiler` must be a valid handle. `path` must be a valid null-terminated
 * UTF-8 string.
 */
TYPST_API int32_t typst_compiler_set_root(struct typst_TypstCompiler *compiler, const char *path);

/**
 * Add a font search path.
 *
 * # Safety
 * `compiler` must be a valid handle. `path` must be a valid null-terminated
 * UTF-8 string.
 */
TYPST_API
int32_t typst_compiler_add_font_path(struct typst_TypstCompiler *compiler,
                                     const char *path);

/**
 * Compile a Typst source string.
 *
 * `source` is a pointer to a UTF-8 encoded string of `source_len` bytes
 * (not null-terminated). On success, `*result` receives an opaque handle
 * that must be freed with `typst_result_free`.
 *
 * Returns `TYPST_OK` (0) on success (even if compilation produced errors —
 * check with `typst_result_is_success`). Returns a negative error code on
 * API misuse (null pointers, invalid UTF-8).
 *
 * # Safety
 * All pointer arguments must be valid. `source` must point to `source_len`
 * valid bytes.
 */
TYPST_API
int32_t typst_compile(struct typst_TypstCompiler *compiler,
                      const uint8_t *source,
                      int32_t source_len,
                      struct typst_TypstCompileResult **result);

/**
 * Returns `1` if the compilation succeeded, `0` if it failed.
 *
 * # Safety
 * `result` must be a valid handle returned by `typst_compile`.
 */
TYPST_API int32_t typst_result_is_success(const struct typst_TypstCompileResult *result);

/**
 * Get the number of pages in a successful compilation result.
 *
 * Returns the page count, or `0` if the result is a failure.
 *
 * # Safety
 * `result` must be a valid handle.
 */
TYPST_API int32_t typst_result_page_count(const struct typst_TypstCompileResult *result);

/**
 * Get the compiled PDF output.
 *
 * On success, `*data` and `*len` are set to the PDF buffer. The buffer is
 * owned by the result and remains valid until `typst_result_free` is called.
 *
 * Returns `TYPST_OK` on success, `TYPST_ERR_COMPILE_FAILED` if the result
 * is a failure.
 *
 * # Safety
 * All pointers must be valid. The returned `*data` pointer must not be used
 * after `typst_result_free`.
 */
TYPST_API
int32_t typst_result_get_pdf(const struct typst_TypstCompileResult *result,
                             const uint8_t **data,
                             int32_t *len);

/**
 * Get the SVG output for a specific page (0-indexed).
 *
 * On success, `*data` and `*len` are set to the UTF-8 SVG string. The buffer
 * is owned by the result.
 *
 * # Safety
 * All pointers must be valid.
 */
TYPST_API
int32_t typst_result_get_svg_page(const struct typst_TypstCompileResult *result,
                                  int32_t page,
                                  const uint8_t **data,
                                  int32_t *len);

/**
 * Get the number of diagnostics in a failed compilation result.
 *
 * Returns `0` for successful results or null pointers.
 *
 * # Safety
 * `result` must be a valid handle or null.
 */
TYPST_API int32_t typst_result_diagnostic_count(const struct typst_TypstCompileResult *result);

/**
 * Get a diagnostic entry by index.
 *
 * Sets `*severity` (0 = error, 1 = warning), `*message` (UTF-8, owned by
 * the result), `*message_len`, `*line`, and `*column`.
 *
 * # Safety
 * All pointers must be valid. `index` must be in range.
 */
TYPST_API
int32_t typst_result_get_diagnostic(const struct typst_TypstCompileResult *result,
                                    int32_t index,
                                    int32_t *severity,
                                    const uint8_t **message,
                                    int32_t *message_len,
                                    int64_t *line,
                                    int64_t *column);

/**
 * Free a compilation result.
 *
 * # Safety
 * `result` must be a valid handle or null.
 */
TYPST_API void typst_result_free(struct typst_TypstCompileResult *result);

/**
 * Free a buffer returned by the library.
 *
 * # Safety
 * `buffer` must be a valid handle or null.
 */
TYPST_API void typst_buffer_free(struct typst_TypstBuffer *buffer);

/**
 * Returns the version of the typst-ffi library as a static null-terminated
 * C string.
 */
TYPST_API const char *typst_version(void);

#ifdef __cplusplus
}  // extern "C"
#endif  // __cplusplus

#endif  /* TYPST_FFI_H */